--- a/configs/fsimx6sx_min_defconfig
+++ b/configs/fsimx6sx_min_defconfig
@@ -8,16 +8,16 @@ BR2_OPTIMIZE_3=y
 BR2_PACKAGE_OVERRIDE_FILE="board/f+s/fsimx6sx/local-fsimx6sx.mk"
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
-BR2_TOOLCHAIN_EXTERNAL_PATH="/usr/local/arm/fs-toolchain-9.3-armv7ahf"
-BR2_TOOLCHAIN_EXTERNAL_GCC_9=y
-BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_4=y
+BR2_TOOLCHAIN_EXTERNAL_PATH="/usr/local/arm/fs-toolchain-11.2-armv7ahf"
+BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="arm-linux"
+BR2_TOOLCHAIN_EXTERNAL_GCC_11=y
+BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_15=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
 BR2_TOOLCHAIN_EXTERNAL_CXX=y
 # BR2_TOOLCHAIN_EXTERNAL_INET_RPC is not set
 BR2_PACKAGE_LIBTIRPC=y
 BR2_PACKAGE_HOST_GDB=y
 BR2_TARGET_OPTIMIZATION="-pipe"
-BR2_ECLIPSE_REGISTER=y
 BR2_TARGET_GENERIC_HOSTNAME="fsimx6sx"
 BR2_TARGET_GENERIC_ISSUE="Welcome to F+S i.MX6SoloX"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
@@ -27,11 +27,11 @@ BR2_TARGET_GENERIC_GETTY_PORT="login_tty"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/f+s/fsimx6/finalscript_min-fsimx6sx"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.4.70"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.15.131"
 BR2_LINUX_KERNEL_DEFCONFIG="fsimx6sx"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="efusa9x efusa9xr2 picocoma9x picocoremx6sx picocoremx6sxr2 cont1 vand3 vc600"
-BR2_PACKAGE_BUSYBOX_CONFIG="board/f+s/common/busybox-1.33.2.config"
+BR2_PACKAGE_BUSYBOX_CONFIG="board/f+s/common/busybox-1.36.1.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_EUDEV_ENABLE_HWDB is not set
 BR2_PACKAGE_FREESCALE_IMX=y
@@ -41,14 +41,14 @@ BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_KMOD_TOOLS=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
-BR2_TARGET_ROOTFS_EXT2_SIZE="20000"
+BR2_TARGET_ROOTFS_EXT2_SIZE="22000"
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_ROOTFS_UBIFS=y
 BR2_TARGET_ROOTFS_UBIFS_LEBSIZE=0x1f000
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION=y
-BR2_TARGET_UBOOT_CUSTOM_VERSION_VALUE="2018.03"
+BR2_TARGET_UBOOT_CUSTOM_VERSION_VALUE="2021.04"
 BR2_TARGET_UBOOT_BOARD_DEFCONFIG="fsimx6sx"
 BR2_TARGET_UBOOT_FORMAT_CUSTOM=y
 BR2_TARGET_UBOOT_FORMAT_CUSTOM_NAME="uboot.nb0"
