Fix xwayland config
- Cairo can not be build with GLX support, because the
  vivante driver does not support X11 anymore. For this,
  openvg has to be removed from the cairo config.
- xwayland can not be build with glamore support,because
  the vivante driver does not support X11 anymore. Remove
  glamore support if vivante gpu is selceted.
- Remove unneeded packages from defconfig.

--- a/configs/fsimx6sx_xwayland_defconfig
+++ b/configs/fsimx6sx_xwayland_defconfig
@@ -102,8 +102,6 @@ BR2_PACKAGE_WESTON_IMX_FBDEV=y
 BR2_PACKAGE_WESTON_RDP=y
 BR2_PACKAGE_WESTON_DEMO_CLIENTS=y
 BR2_PACKAGE_XORG7=y
-BR2_PACKAGE_XSERVER_XORG_SERVER=y
-BR2_PACKAGE_XLIB_LIBXCOMPOSITE=y
 BR2_PACKAGE_XTERM=y
 BR2_PACKAGE_PSPLASH=y
 BR2_PACKAGE_CONFIG_PSPLASH=y
@@ -118,6 +116,7 @@ BR2_PACKAGE_IMX_M4FWLOADER=y
 BR2_PACKAGE_FIRMWARE_IMX=y
 BR2_PACKAGE_IMX_GPU_G2D=y
 BR2_PACKAGE_IMX_GPU_VIV_OUTPUT_WL=y
+# BR2_PACKAGE_CAIRO_OPENVG is not set
 BR2_PACKAGE_KBD=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
 BR2_PACKAGE_PCIUTILS=y
