Add ath10k wlan firmware for fsimx6sx and fsimx6ul
We want to use the mainline driver for the Silex wlan chips so add the
mainline firmware to the rootfs

--- a/configs/fsimx6ul_xwayland_defconfig
+++ b/configs/fsimx6ul_xwayland_defconfig
@@ -112,6 +112,7 @@ BR2_PACKAGE_XTERM=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_SD8787=y
 BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_SDSD8997=y
+BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_10K_QCA9377=y
 BR2_PACKAGE_TOUCH_FIRMWARE=y
 BR2_PACKAGE_FREESCALE_IMX=y
 BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX6UL=y
