--- a/configs/fsimx6sx_qt5_defconfig
+++ b/configs/fsimx6sx_qt5_defconfig
@@ -125,6 +125,7 @@ BR2_PACKAGE_QT5TOOLS_QTPLUGININFO=y
 BR2_PACKAGE_QT5WEBCHANNEL=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_SD8787=y
+BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_10K_QCA9377=y
 BR2_PACKAGE_TOUCH_FIRMWARE=y
 BR2_PACKAGE_FREESCALE_IMX=y
 BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX6S=y
