--- a/configs/fsimx6sx_wayland_defconfig
+++ b/configs/fsimx6sx_wayland_defconfig
@@ -105,6 +105,7 @@ BR2_PACKAGE_CONFIG_PSPLASH=y
 BR2_PACKAGE_PSPLASH_IMAGE="board/f+s/common/FS-Logo-256px.png"
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_SD8787=y
+BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_10K_QCA9377=y
 BR2_PACKAGE_TOUCH_FIRMWARE=y
 BR2_PACKAGE_FREESCALE_IMX=y
 BR2_PACKAGE_FREESCALE_IMX_PLATFORM_IMX6S=y
